Restored to '0ab04694422470593dca8870133422c67ba5c769'
Replit-Restored-To: 0ab04694422470593dca8870133422c67ba5c769

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -123,12 +123,14 @@
 
 .mask-fade-x {
   mask-image: linear-gradient(to right, 
-    black 0%,
+    transparent,
+    black 20%,
     black 80%,
     transparent 100%
   );
   -webkit-mask-image: linear-gradient(to right,
-    black 0%,
+    transparent,
+    black 20%,
     black 80%,
     transparent 100%
   );
